--- a/sixtysecondscv.tex
+++ b/sixtysecondscv.tex
@@ -195,7 +195,7 @@
 
 %% optional information
 % profile picture
-\cvprofilepic{QmZiD898vX1yaukukNbgbuSoUtqVRD262k4qK4xWB523LM.png}
+\cvprofilepic{QmZiD898vX1yaukukNbgbuSoUtqVRD262k4qK4xWB523LM?filename=QmZiD898vX1yaukukNbgbuSoUtqVRD262k4qK4xWB523LM.png}
 % logo picture
 %\cvlogopic{pics/logo_txt.png}
 
@@ -210,6 +210,8 @@
 \cvsite{https://laguer.github.io/sixtysecondscv/}
 % email address
 \cvmail{mail@dot.com}
+% skype id 
+\cvskype{myskypeid}
 % pgp key
 \cvkey{4096R/FF00FF00}{0xAABBCCDDFF00FF00}
 % any other custom entry
