--- a/sixtysecondscv.tex
+++ b/sixtysecondscv.tex
@@ -206,12 +206,12 @@
 \cvaddress{301 Park Ave, New-York, 10022 NY, USA}
 % phone number
 \cvphone{+1 212 355 3000}
+% skype id 
+\cvskype{myskypeID}
 % personal website
 \cvsite{https://laguer.github.io/sixtysecondscv/}
 % email address
 \cvmail{mail@dot.com}
-% skype id 
-\cvskype{myskypeid}
 % pgp key
 \cvkey{4096R/FF00FF00}{0xAABBCCDDFF00FF00}
 % any other custom entry
