--- a/sixtysecondscv.tex
+++ b/sixtysecondscv.tex
@@ -114,7 +114,7 @@
 
 %% optional information
 % profile picture
-\cvprofilepic{QmZiD898vX1yaukukNbgbuSoUtqVRD262k4qK4xWB523LM.png}
+\cvprofilepic{QmZiD898vX1yaukukNbgbuSoUtqVRD262k4qK4xWB523LM?filename=QmZiD898vX1yaukukNbgbuSoUtqVRD262k4qK4xWB523LM.png}
 % logo picture
 %\cvlogopic{pics/logo_txt.png}
 
@@ -149,7 +149,7 @@
 	\profilesection{Social Network}
 		\begin{icontable}{2.5em}{1em}
 			\social{\aiOverleafSquare}
-				{https://www.overleaf.com/latex/templates/SixtySecondsCV/}
+				{https://www.overleaf.com/latex/templates/SixtySecondsCV/gcdrzwwvkqcr}
 				{Overleaf Link}
 			\social{\aiResearchGate}
 				{https://www.researchgate.net/profile/}
