--- a/sixtysecondscv.tex
+++ b/sixtysecondscv.tex
@@ -184,18 +184,18 @@
 % job title/career
 \cvjobtitle{Data Scientist,\\[0.2em] Tiger of the Year}
 
-\write18{wget https://raw.githubusercontent.com/gosquared/flags/master/flags/flags/shiny/64/Germany.png}
-\write18{wget https://raw.githubusercontent.com/gosquared/flags/master/flags/flags/shiny/64/France.png}
-\write18{wget https://raw.githubusercontent.com/gosquared/flags/master/flags/flags/shiny/64/Spain.png}
-\write18{wget https://raw.githubusercontent.com/gosquared/flags/master/flags/flags/shiny/64/United-States.png}
-\write18{wget https://raw.githubusercontent.com/gosquared/flags/master/flags/flags/shiny/64/Russia.png}
-\write18{wget https://raw.githubusercontent.com/gosquared/flags/master/flags/flags/shiny/64/Switzerland.png}
-\write18{wget https://ipfs.io/ipfs/QmZiD898vX1yaukukNbgbuSoUtqVRD262k4qK4xWB523LM?filename=QmZiD898vX1yaukukNbgbuSoUtqVRD262k4qK4xWB523LM.png}
+%\write18{wget https://raw.githubusercontent.com/gosquared/flags/master/flags/flags/shiny/64/Germany.png}
+%\write18{wget https://raw.githubusercontent.com/gosquared/flags/master/flags/flags/shiny/64/France.png}
+%\write18{wget https://raw.githubusercontent.com/gosquared/flags/master/flags/flags/shiny/64/Spain.png}
+%\write18{wget https://raw.githubusercontent.com/gosquared/flags/master/flags/flags/shiny/64/United-States.png}
+%\write18{wget https://raw.githubusercontent.com/gosquared/flags/master/flags/flags/shiny/64/Russia.png}
+%\write18{wget https://raw.githubusercontent.com/gosquared/flags/master/flags/flags/shiny/64/Switzerland.png}
+%\write18{wget https://ipfs.io/ipfs/QmZiD898vX1yaukukNbgbuSoUtqVRD262k4qK4xWB523LM?filename=QmZiD898vX1yaukukNbgbuSoUtqVRD262k4qK4xWB523LM.png}
 
 
 %% optional information
 % profile picture
-\cvprofilepic{QmZiD898vX1yaukukNbgbuSoUtqVRD262k4qK4xWB523LM?filename=QmZiD898vX1yaukukNbgbuSoUtqVRD262k4qK4xWB523LM.png}
+%\cvprofilepic{QmZiD898vX1yaukukNbgbuSoUtqVRD262k4qK4xWB523LM?filename=QmZiD898vX1yaukukNbgbuSoUtqVRD262k4qK4xWB523LM.png}
 % logo picture
 %\cvlogopic{pics/logo_txt.png}
 
